fix z-index

--- a/src/app/carrosel/carrosel.component.css
+++ b/src/app/carrosel/carrosel.component.css
@@ -1,3 +1,7 @@
+.carousel{
+    z-index: 0;
+}
+
 img{
     width: 50px;
     height: 250px;
